--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -2,13 +2,15 @@
 //  Forms
 // =========================================
 
-.form__label--hidden {
-  display: none;
-}
-
 .form {
   @extend %center;
   width: 100%;
+
+  @include e(label) {
+    @include m(hidden) {
+      display: none;
+    }
+  }
 
 
 
@@ -16,7 +18,5 @@
     display: block;
     margin: 14px auto;
       width: 80%;
-
-
   }
 }
